--- a/public/css/index.css
+++ b/public/css/index.css
@@ -21,9 +21,9 @@ html {
         height: 100vh;
     }
     .page-bar .title{
-        bottom: 17rem;
+        bottom: 18.5rem;
     }
-    .page-bar h1{font-size: 7rem}
+    .page-bar h1{font-size: 5rem}
 }
 /*电脑*/
 @media only screen and (min-width: 768px){
@@ -80,7 +80,7 @@ html {
     right: 2%;
     top: 2%;
 }
-.page-bar .nav {
+.page-bar .nav span{
     width: 100%;
     height: 100%;
 }
