--- a/public/css/index.css
+++ b/public/css/index.css
@@ -26,77 +26,77 @@ html {
     .page-bar h1{font-size: 5rem}
 }
 /*电脑*/
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 770px){
 
     html {
          font-size: 17px;
      }
     .page-bar{
-        height: 51vw;
+        /*height: 51vw;*/
+        height: 100vh;
     }
     .page-bar .title{
-        bottom: 10rem;
+        bottom: 27rem;
     }
     .page-bar h1{font-size: 9rem}
 
 }
-@media only screen and (min-width: 1200px){
+@media only screen and (min-width: 1600px){
     .page-bar .title{
-        bottom: 24rem;
+        bottom: 30rem;
     }
-    .page-bar h1{font-size: 11rem}
+    .page-bar h1{font-size: 13rem}
 }
 
 
 /*主页的大框架*/
 .main-page{
     width: 100vw;
-    /*height: 300vh;*/
-    border: blue solid 1px;
+    position: relative;
 }
-.page-bar{
+.main-page .logo{
+    width: 10rem;
+    height: 10rem;
+    position: fixed;
+    left: 1%;
+    top: 1%;
+    z-index: 1;
+}
+.main-page .logo img{
+    width: 100%;
+    height: 100%;
+}
+.main-page .nav{
+    /*不用给宽高，里面是字体图标，*/
+    /*width: 4rem;*/
+    /*height: 4rem;*/
+    position: fixed;
+    right: 3%;
+    top: 5%;
+    z-index: 1;
+}
+.main-page .nav span{
+    display: block;
+    font-size: 4.5rem;/*字体图标设置字的大小*/
+    color: #514E4B;
+}
+/*三栏的设置*/
+.main-page .page-bar{
     width: 100vw;
-    /*border:red solid 1px;*/
     position: relative;
 }
 .page-bar img{
     width: 100%;
     height: 100%;
 }
-/*主页第一栏*/
-.page-bar .header{
-    width: 5rem;
-    height: 5rem;
-    border: green solid 1px;
-    position: fixed;
-    left: 2%;
-    top: 2%;
-}
-.page-bar .nav{
-    width: 4rem;
-    height: 4rem;
-    border: green solid 1px;
-    position: fixed;
-    right: 2%;
-    top: 2%;
-}
-.page-bar .nav span{
-    width: 100%;
-    height: 100%;
-}
+/*第一栏里的标题*/
 .page-bar .title{
     width: 100%;
     height: 14rem;
     /*border: red solid 1px;*/
     position: absolute;
 }
-.page-bar h1{
+.page-bar h1 {
     top: 38vh;
-    text-align: center;
-
-}
-.page-bar h2{
-    font: bold 2.5rem "Microsoft Himalaya";
-    top: 37vh;
     text-align: center;
 }
