--- a/public/css/index.css
+++ b/public/css/index.css
@@ -55,16 +55,18 @@ html {
     position: relative;
 }
 .main-page .logo{
-    width: 10rem;
-    height: 10rem;
+    /*width: 10rem;*/
+    /*height: 10rem;*/
     position: fixed;
     left: 1%;
-    top: 1%;
+    top: 1.5%;
     z-index: 1;
 }
 .main-page .logo img{
-    width: 100%;
-    height: 100%;
+    /*width: 100%;*/
+    /*height: 100%;*/
+    width: 8rem;
+    height: 8rem;
 }
 .main-page .nav{
     /*不用给宽高，里面是字体图标，*/
@@ -77,7 +79,7 @@ html {
 }
 .main-page .nav span{
     display: block;
-    font-size: 4.5rem;/*字体图标设置字的大小*/
+    font-size: 4.2rem;/*字体图标设置字的大小*/
     color: #514E4B;
 }
 /*三栏的设置*/
