--- a/views/login.html
+++ b/views/login.html
@@ -10,14 +10,14 @@
     <div class="center">
 
                 <div class="photo ">
-                    <img src="" alt="">
+                    <img src="../public/images/login-center-left.png" alt="">
                 </div>
                 <div class="login">
                     <h3>LOG IN</h3>
-                    <input type="text">
-                    <input type="password">
+                    <input type="text" placeholder="用户名" class="input1" >
+                    <input type="password" placeholder="密码" class="input2">
                     <button><span>立即登录</span></button>
-                    <p>您还不是会员？</p><a href="">免费注册</a>
+                    <p>您还不是会员？<a href="">免费注册</a></p>
                 </div>
 
     </div>
