--- a/views/login.html
+++ b/views/login.html
@@ -7,18 +7,21 @@
 </head>
 <body>
 <div class="bg">
+    <picture>
+        <source srcset="../public/images/login-bcg.jpg" media="(max-width: 770px)">
+        <img src="../public/images/login-bcg11.jpg"><!--默认情况显示图片-->
+    </picture>
     <div class="center">
-
-                <div class="photo ">
-                    <img src="../public/images/login-center-left.png" alt="">
-                </div>
-                <div class="login">
-                    <h3>LOG IN</h3>
-                    <input type="text" placeholder="用户名" class="input1" >
-                    <input type="password" placeholder="密码" class="input2">
-                    <button><span>立即登录</span></button>
-                    <p>您还不是会员？<a href="">免费注册</a></p>
-                </div>
+        <div class="photo ">
+            <img src="../public/images/login-center-left.png" alt="">
+        </div>
+        <div class="login">
+            <h3>LOG IN</h3>
+            <input type="text" placeholder="用户名" class="input1" >
+            <input type="password" placeholder="密码" class="input2">
+            <button><span>立即登录</span></button>
+            <p>您还不是会员？<a href="">免费注册</a></p>
+        </div>
 
     </div>
 </div>
