--- a/views/clothing.html
+++ b/views/clothing.html
@@ -5,17 +5,18 @@
     <title>Clothing</title>
     <link rel="stylesheet" href="../bootstrap-3.3.7/css/bootstrap.css">
     <link rel="stylesheet" href="../public/css/index.css">
+
 </head>
 <body>
-
+<script type="text/javascript" src="../public/js/clothing.js"></script>
 <div class="clothing">
     <div class="clothing-header">
         <h1><a href="../index.html">PLAYBOY</a></h1>
     </div>
     <div class="container">
         <ul class="row">
-            <li class="col-lg-3 col-sm-6"></li>
-            <li class="col-lg-3 col-sm-6"></li>
+            <li class="col-lg-3 col-sm-6"><img src="../public/images/018.jpg" alt=""></li>
+            <li class="col-lg-3 col-sm-6"><img src="../public/images/018.jpg" alt=""></li>
             <li class="col-lg-3 col-sm-6"></li>
             <li class="col-lg-3 col-sm-6"></li>
             <li class="col-lg-3 col-sm-6"></li>
