--- a/public/css/index.css
+++ b/public/css/index.css
@@ -157,7 +157,7 @@ html {
     color: #337ab7;
     opacity: 0.5;
 }
-/*登录页面*/
+/**登录页面*/
 /*.bg{*/
     /*width: 100vw;*/
     /*height: 100vh;*/
@@ -262,4 +262,9 @@ html {
     height: 25rem;
     border: blue solid 1px;
     cursor: pointer;
+    opacity: 1;
+}
+.clothing .container li img{
+    width: 100%;
+    height: 100%;
 }
